crates/sith_python_parser/tests/snapshots/invalid_syntax@re_lexing__line_continuation_windows_eol.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/invalid/re_lexing/line_continuation_windows_eol.py
---
## AST

```
Module(
    ModModule {
        range: 0..46,
        body: [
            Expr(
                ExprStmt {
                    range: 0..10,
                    value: Call(
                        CallExpr {
                            range: 0..10,
                            func: Name(
                                NameExpr {
                                    range: 0..4,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 4..10,
                                args: [
                                    Name(
                                        NameExpr {
                                            range: 5..6,
                                            id: Name("a"),
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        NameExpr {
                                            range: 8..9,
                                            id: Name("b"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                keywords: [],
                            },
                        },
                    ),
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 26..46,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("bar"),
                        range: 30..33,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 33..35,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Pass(
                            PassStmt {
                                range: 42..46,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 |   call(a, b, # comment \
  |  _______________________^
2 | | 
  | |_^ Syntax Error: Expected ')', found newline
3 |   def bar():
4 |       pass
  |
